--- a/internal/standalone/frontend/index.html
+++ b/internal/standalone/frontend/index.html
@@ -1,16 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>Solid App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+<!doctype html>
+<html lang="en" class="h-full">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <link
+            rel="shortcut icon"
+            type="image/ico"
+            href="/src/assets/favicon.ico"
+        />
+        <title>GoRetro</title>
+    </head>
 
-    <script src="/src/index.tsx" type="module"></script>
-  </body>
+    <body class="h-full">
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root" class="h-full">
+            <canvas id="render-target" class="h-full" width="256" height="256">
+                hello
+            </canvas>
+        </div>
+
+        <script src="/src/index.ts" type="module"></script>
+    </body>
 </html>
