--- a/internal/standalone/frontend/index.html
+++ b/internal/standalone/frontend/index.html
@@ -15,7 +15,7 @@
     <body class="h-full">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root" class="h-full">
-            <canvas id="render-target" class="h-full" width="256" height="256">
+            <canvas id="render-target" width="256" height="256" class="h-full">
                 hello
             </canvas>
         </div>
